test tensorboard command line
note that we have introduced now a tensorflow dependency on testing - chicken and egg

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,8 +64,12 @@ requirements:
     #
 
 test:
+  requires:
+    - tensorflow >=1.4.0,<1.5
   imports:
     - tensorboard
+  commands:
+    - tensorboard --help
   # To be super-strict, we should run the original tests with bazel against the newly created package
 
 about:
