--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "0.4.0rc3" %}
-{% set build_number = "2" %}
+{% set version = "1.5.1" %}
+{% set build_number = "1" %}
 
 package:
   name: tensorboard
@@ -29,7 +29,7 @@ requirements:
     - html5lib ==0.9999999
     - markdown >=2.6.8
     - numpy >=1.12.0
-    - protobuf >=3.3.0
+    - protobuf >=3.4.0
     - six >=1.10.0
     - werkzeug >=0.11.10
 
