Adjust `pip install` to use new name
The PyPI package has been renamed from `tensorflow-tensorboard` to
`tensorboard`. So update the `pip install` command to use `tensorboard`
instead.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ build:
 
   number: {{ build_number }}
   script:
-    - pip install --no-deps tensorflow-tensorboard=={{ version }}
+    - pip install --no-deps tensorboard=={{ version }}
 
 requirements:
   # See: https://pypi.python.org/pypi/tensorflow-tensorboard/0.4.0rc3
