--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,14 +24,14 @@ requirements:
     - pip
   run:
     - python
-    - futures >=3.1.1  # [py27]
-    - bleach >=1.5.0
-    - html5lib >=0.9999999
-    - markdown >=2.6.8
-    - numpy >=1.12.0
-    - protobuf >=3.4.0
-    - six >=1.10.0
-    - werkzeug >=0.11.10
+    - numpy >= 1.12.0
+    - six >= 1.10.0
+    - protobuf >= 3.4.0
+    - werkzeug >= 0.11.10
+    - html5lib == 0.9999999 # identical to 1.0b8
+    - markdown >= 2.6.8
+    - bleach == 1.5.0
+    - futures >= 3.1.1   # [py27]
 
     #
     # After splitting out of tensorflow, the tensorboard pypi package is problematic:
