--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "1.8.0" %}
-{% set build_number = "1" %}
+{% set version = "1.9.0" %}
+{% set build_number = "0" %}
 
 package:
   name: tensorboard
@@ -30,9 +30,7 @@ requirements:
     - six >=1.10.0
     - protobuf >=3.4.0
     - werkzeug >=0.11.10
-    - html5lib ==0.9999999 # identical to 1.0b8
     - markdown >=2.6.8
-    - bleach ==1.5.0
     - futures >=3.1.1   # [py27]
 
     #
@@ -80,3 +78,4 @@ extra:
     - sdvillal
     - danielfrg
     - gilbertfrancois
+    - farhantejani
