--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,18 +5,16 @@ package:
   name: tensorboard
   version: {{ version }}
 
-{% set py_major = "py2" %}  # [py2k]
-{% set py_major = "py3" %}  # [py3k]
-{% set wheel_fn = "tensorboard-" + version + "-" + py_major + "-none-any.whl" %}
 source:
-  url: https://pypi.io/packages/{{ py_major }}/t/tensorboard/{{ wheel_fn }}
-  sha256: 64edbe66864e02719f85708ae01efe3448af964c042a502fd2046cc87a3b1f12  # [py2k]
-  sha256: e4ea6ac2e47bf715b915f08a186e6205fa097318bd73f0b265d437b1d7834484  # [py3k]
+  url: https://pypi.io/packages/py2/t/tensorboard/tensorboard-{{ version }}-py2-none-any.whl  # [py2k]
+  sha256: 64edbe66864e02719f85708ae01efe3448af964c042a502fd2046cc87a3b1f12                    # [py2k]
+  url: https://pypi.io/packages/py3/t/tensorboard/tensorboard-{{ version }}-py3-none-any.whl  # [py2k]
+  sha256: e4ea6ac2e47bf715b915f08a186e6205fa097318bd73f0b265d437b1d7834484                    # [py3k]
 
 build:
   number: {{ build_number }}
   script:
-    - python -m pip install --no-deps --ignore-installed ./{{ wheel_fn }}
+    - python -m pip install --no-deps --ignore-installed ./tensorboard-*.whl
   entry_points:
     - tensorboard = tensorboard.main:run_main
 
