Change build to host reqs, add wheel to run reqs
Trying to fix test failures on the new "tensorboard -h" test:

(py3):
pkg_resources.DistributionNotFound: The 'wheel>=0.26; python_version >= "3"' distribution was not found and is required by the application

(py2):
pkg_resources.DistributionNotFound: The 'wheel; python_version < "3"' distribution was not found and is required by the application

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,12 +20,12 @@ build:
     - tensorboard = tensorboard.main:run_main
 
 requirements:
-  # See: https://pypi.org/project/tensorboard
-  build:
+  host:
     - python
     - pip
   run:
     - python
+    - wheel >=0.26
     - numpy >=1.12.0
     - six >=1.10.0
     - protobuf >=3.4.0
