Disable win+py27 build
Python 2.7 on Windows is no longer supported because of missing
requirements, see https://github.com/conda-forge/grpcio-feedstock/issues/6

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: {{ build_number }}
+  skip: True  # [win and py27]
   script:
     - python -m pip install --no-deps --ignore-installed ./tensorboard-{{ version }}-py2-none-any.whl  # [py2k]
     - python -m pip install --no-deps --ignore-installed ./tensorboard-{{ version }}-py3-none-any.whl  # [py3k]
