Revert "MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.7, and conda-forge-pinning 2019.09.08"
This reverts commit 4751e3063a42171b73b471f02c1987a50e3a055d.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,5 @@
-* @danielfrg @dougalsutherland @farhantejani @gilbertfrancois @sdvillal
+* @danielfrg
+* @dougalsutherland
+* @farhantejani
+* @gilbertfrancois
+* @sdvillal
