--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - markdown >=2.6.8
     - absl-py >=0.4
     - grpcio >=1.24.3
-    - google_auth_oauthlib ==0.4.1
+    - google-auth-oauthlib ==0.4.1
 
 test:
   imports:
