--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,6 +32,7 @@ requirements:
     - absl-py >=0.4
     - grpcio >=1.24.3
     - google-auth-oauthlib ==0.4.1
+    - tensorboard-plugin-wit >=1.6.0
 
 test:
   imports:
