--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - grpcio >=1.24.3
     - google-auth-oauthlib ==0.4.1
     - tensorboard-plugin-wit >=1.6.0
+    - tensorboard-data-server >=0.6.0,<0.7.0
 
 test:
   imports:
