Add @xhochy as a maintainer

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @farhantejani @gilbertfrancois @jschueller @mdraw @sdvillal
+* @farhantejani @gilbertfrancois @jschueller @mdraw @sdvillal @xhochy
