--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: e167460085b6528956b33bab1c970c989cdce47a6616273880733f5e7bde452e
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script:
     - python -m pip install --no-deps --ignore-installed ./tensorboard-{{ version }}-py3-none-any.whl
@@ -31,7 +31,10 @@ requirements:
     - markdown >=2.6.8
     - absl-py >=0.4
     - grpcio >=1.24.3
-    - google-auth-oauthlib ==0.4.1
+    - google-auth >=1.6.3,<2
+    - google-auth-oauthlib >=0.4.1,<0.5
+    - requests >=2.21.0,<3
+    - setuptools >=41.0.0
     - tensorboard-plugin-wit >=1.6.0
     - tensorboard-data-server >=0.6.0,<0.7.0
 
@@ -54,3 +57,4 @@ extra:
     - farhantejani
     - mdraw
     - jschueller
+    - xhochy
