--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - markdown >=2.6.8
     - absl-py >=0.4
     - grpcio >=1.24.3
-    - google-auth >=1.6.3,<2
+    - google-auth >=1.6.3,<3
     - google-auth-oauthlib >=0.4.1,<0.5
     - requests >=2.21.0,<3
     - setuptools >=41.0.0
@@ -39,10 +39,13 @@ requirements:
     - tensorboard-data-server >=0.6.0,<0.7.0
 
 test:
+  requires:
+    - pip
   imports:
     - tensorboard
   commands:
     - tensorboard -h
+    - pip check
 
 about:
   home: https://github.com/tensorflow/tensorboard
