--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,10 +19,10 @@ build:
 
 requirements:
   host:
-    - python >=3.2,<3.10
+    - python >=3.2
     - pip
   run:
-    - python >=3.2,<3.10
+    - python >=3.2
     - wheel >=0.26
     - numpy >=1.12.0
     - six >=1.10.0
