--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,6 @@ requirements:
     - wheel >=0.26
     - numpy >=1.12.0
     - six >=1.10.0
-    - libprotobuf
     - protobuf >=3.9.2
     - werkzeug >=1.0.1
     - markdown >=2.6.8
@@ -46,7 +45,10 @@ test:
     - tensorboard
   commands:
     - tensorboard -h
-    - pip check
+    # ngam 20220904: pip check fails because protobuf <3.20 upstream
+    # but we want this to coexist with our libprotobuf global pin
+    # which is now at 3.20 and moving to 3.21
+    # - pip check
 
 about:
   home: https://github.com/tensorflow/tensorboard
