--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,17 +24,17 @@ requirements:
     - wheel >=0.26
     - numpy >=1.12.0
     - six >=1.10.0
-    - protobuf >=3.9.2
+    - protobuf >=3.19.6
     - werkzeug >=1.0.1
     - markdown >=2.6.8
     - absl-py >=0.4
-    - grpcio >=1.24.3
+    - grpcio >=1.48.2
     - google-auth >=1.6.3,<3
     - google-auth-oauthlib >=0.4.1,<0.5
     - requests >=2.21.0,<3
     - setuptools >=41.0.0
     - tensorboard-plugin-wit >=1.6.0
-    - tensorboard-data-server >=0.6.0,<0.7.0
+    - tensorboard-data-server >=0.7.0,<0.8.0,
 
 test:
   requires:
