--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,7 @@ requirements:
     - requests >=2.21.0,<3
     - setuptools >=41.0.0
     - tensorboard-plugin-wit >=1.6.0
-    - tensorboard-data-server >=0.7.0,<0.8.0,
+    - tensorboard-data-server >=0.7.0,<0.8.0
 
 test:
   requires:
