--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,14 +23,11 @@ requirements:
     - python >=3.8
     - six >=1.9
     - numpy >=1.12.0
-    - protobuf >=3.19.6
+    - protobuf >=3.19.6,!=4.24.0
     - werkzeug >=1.0.1
     - markdown >=2.6.8
     - absl-py >=0.4
     - grpcio >=1.48.2
-    - google-auth >=1.6.3,<3
-    - google-auth-oauthlib >=0.5,<2
-    - requests >=2.21.0,<3
     - setuptools >=41.0.0
     - tensorboard-data-server >=0.7.0,<0.8.0
 
