--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,12 +23,13 @@ requirements:
     - python >=3.8
     - six >=1.9
     - numpy >=1.12.0
-    - protobuf >=3.19.6,!=4.24.0,<5.0.0
+    - protobuf >=3.19.6,!=4.24.0
     - werkzeug >=1.0.1
     - markdown >=2.6.8
     - absl-py >=0.4
     - grpcio >=1.48.2
     - setuptools >=41.0.0
+    - packaging
     - tensorboard-data-server >=0.7.0,<0.8.0
 
 test:
