--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - markdown >=2.6.8
     - numpy >=1.12.0
     - packaging
-    - six >1.9
+    - pillow
     - protobuf >=3.19.6,!=4.24.0
     - werkzeug >=1.0.1
     - setuptools >=41.0.0
